examples/bad/ERROR_NOT_A_FUNCTION/simple_no_function.st
language core;

fn main(n : Nat) -> Nat {
  return n(n)
}

//ERROR_NOT_A_FUNCTION
